modal style updated

--- a/src/styles/_partial/_app.scss
+++ b/src/styles/_partial/_app.scss
@@ -18,7 +18,9 @@
   color: darken(red, 20%);
   font-weight: bold;
 }
-
+.peoplename {
+  cursor: pointer;
+}
 
 .container{
   @include clearfix;
@@ -46,4 +48,19 @@
 footer{
   background: #000;
   color: #FFF;
+}
+
+.Buttons {
+  margin: 10px;
+  padding: 10px;
+  overflow: hidden;
+
+  .previousBtn,
+  .nextBtn{
+    display: inherit;
+    float: left;
+  }
+  .nextBtn {
+    float: right;
+  }
 }
